Fix searchable-select dropdown clipping in docs page by adjusting z-index and overflow

--- a/BlazingStory.ToolKit/Inputs/Select.razor.scss
+++ b/BlazingStory.ToolKit/Inputs/Select.razor.scss
@@ -16,6 +16,10 @@
     display: inline-flex;
     width: 100%;
 
+    &.bs-basic-inputs-holder {
+        overflow: visible;
+    }
+
     .searchable-select-input {
         width: 100%;
         cursor: text;
